[project]
name = "fravelibre"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "flask>=3.1.0",
    "google-api-python-client==1.7.9",
    "google-auth-httplib2==0.0.3",
    "google-auth-oauthlib==0.4.0",
    "lxml>=5.3.1",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]
